<resources>
    <string name="app_name">BiliBili</string>
    <string name="home_page">首页</string>
    <string name="dynamic">分区</string>
    <string name="my_status">我的</string>
    <string name="comment">评论</string>
    <string name="introduce">简介</string>
    <string name="attention">关注</string>
    <string name="dislike">不喜欢</string>
    <string name="not_login">未登录</string>
    <string name="not_login_bottom">登录体验更多功能</string>
    <string name="nav_home">首页</string>
    <string name="nav_history">历史记录</string>
    <string name="nav_temp_video">离线缓存</string>
    <string name="nav_my_collect">我的收藏</string>
    <string name="nav_next_watch">稍后再看</string>
    <string name="remove_all_history">清空历史记录</string>
    <string name="danmaku_shield_level">弹幕屏蔽等级</string>
    <string name="enable_danmaku">是否启用弹幕</string>
    <string name="video_settings">视频设置</string>
    <string name="video_play_settings">视频播放设置</string>
    <string name="logout">退出登录</string>
</resources>