<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="2dp"
    app:cardElevation="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_title"
                android:text="@string/video_play_settings"
                android:textColor="@color/textColorTitle"
                android:layout_gravity="center"
                android:textSize="@dimen/title_size"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/tv_enable_danmaku"
                    android:text="@string/enable_danmaku"
                    android:textColor="@color/textColorPrimary"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/sub_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_enable_danmaku"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tv_danmaku_shield_level"
                    android:text="@string/danmaku_shield_level"
                    android:textColor="@color/textColorPrimary"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/sub_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner_danmaku_shield_level"
                    android:entries="@array/data"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end" />

            </FrameLayout>
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>
